--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -2,8 +2,8 @@ name: Waka Readme
 
 on:
   schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
+    # Runs at 12am CST
+    - cron: '00 08 * * *'
   workflow_dispatch:
 jobs:
   update-readme:
