--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -17,4 +17,5 @@ jobs:
           SHOW_PROFILE_VIEWS: "False"
           SHOW_PROJECTS: "False"
           SHOW_SHORT_INFO: "False"
+          SHOW_LOC_CHART: "False"
           IGNORED_REPOS: "coldnight.github.com"
